fix padding on mobile

--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -7,6 +7,7 @@
     background-color: black;
     width: 80%;
     height: 500px;
+    padding: 40px;
 }
 
 .label-wrapper {
